# barcodeapp

./: Cargo.toml  README.md  data.db  data.db-shm  data.db-wal  start.sh
migrations/: 20241207152219_create.sql
runner/: Cargo.toml
runner/src/: main.rs
runner/ui/: app-window.slint  card.slint  common.slint  concar .slint  content.slint  theme.slint  theme2.slint
runner/ui/content/: main_page.slint
